# pd-bench-platform

./: .gitignore  .gitmodules  CNAME  README.md  __next.__PAGE__.txt  __next._tree.txt  index.html  index.txt
_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt  index.html  index.txt
experiments/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.experiments.__PAGE__.txt  __next.experiments.txt  index.html
fixtures/: gen_fixture.py
fixtures/ariane133/: ariane133_fp.def  cells.lef  instruction.md  phases.json
launch/: __next._tree.txt  __next.launch.__PAGE__.txt  index.html  index.txt
leaderboard/: __next._tree.txt  __next.leaderboard.__PAGE__.txt  index.html  index.txt
pd/: __init__.py  _bench.py  cli.py  diff.py  metrics.py  model.py  pyproject.toml  store.py  views.py
pd/tests/: test_pd.py
run/: __next._full.txt  __next._tree.txt  __next.run.__PAGE__.txt  index.html
server/: .gitignore  MODAL_SEAM.md  api.py  app.py  ingest.py  main.py  orchestrator.py  pyproject.toml  spec.py  store.py  test_api.py  test_runs.py
tasks/ariane133-asap7-mixed-placement/: __next._index.txt  __next._tree.txt  __next.tasks.$d$id.__PAGE__.txt  index.html  index.txt
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: GatesPanel.tsx  Leaderboard.tsx  Markdown.tsx  Nav.tsx  PhaseScrubber.tsx  PlacementView.tsx  RunCard.tsx  SampleSolution.tsx  ScoreBreakdown.tsx  TaskGallery.tsx
web/lib/: api.ts  experiments.ts  (+6 more)
(+48 files in other folders)
